<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizApp</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="play" translatable="false">Play</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="acBar_Title" translatable="false">QuizzApp</string>
    <string name="title_activity_quiz_app__ac_bar" translatable="false">QuizApp_AcBar</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_call_title">Call</string>
    <string name="action_50_title" translatable="false">50%</string>
    <string name="action_close_title">Close</string>
    <string name="action_delete_title">Records Erase</string>
    <string name="title_activity_scores" translatable="false">ScoresActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_credits" translatable="false">CreditsActivity</string>

    <string name="credits_calico" translatable="false">Calico Lubrico</string>
    <string name="play_for">Play for:</string>
    <string name="question_number">Question</string>
    <string name="settings_label_player_name">Name :</string>
    <string name="settings_hint_player_name">Player\'s Name</string>
    <string name="settings_player_name">Player\'s Name</string>
    <string name="settings_label_help_number">Number of Lifelines:</string>
    <string name="settings_hint_help_number">Number of Lifelines</string>
    <string name="settings_default_help_number" translatable="false">3</string>
    <string name="settings_label_add_friend">Add a Friend</string>
    <string name="settings_button_add_friend" translatable="false">+</string>
    <string name="settings_hint_friend_name">Friend´s Name</string>

    <string name="questions_xml">res/xml/questions.xml</string>
    <string name="acBar_Subtitle">Face your Ignorance</string>
    <string name="action_people_title">Audience</string>
    <string name="buton_answer_1">Answer Number 1</string>
    <string name="buton_answer_2">Answer Number 2</string>
    <string name="buton_answer_3">Answer Number 3</string>
    <string name="buton_answer_4">Answer Number 4</string>
    <string name="dialog_message_wrong_answer">Shame On You!!\nDo you want to try again?</string>
    <string name="dialog_title_wrong_answer">Wrong Answer!!</string>
    <string name="dialog_title_win">Congratulations You Win!!</string>
    <string name="dialog_message_win">It seems that you are smarter than you look</string>
    <string name="dialog_button_win">Back</string>
    <string name="ac_item_credits">Credits</string>

    <string-array name="settings_help_number" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
