<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".PlayActivity" >

    <item android:id="@+id/action_call"
        android:icon="@android:drawable/stat_sys_phone_call_forward"
        android:title="@string/action_call_title"
        app:showAsAction="always"/>

    <item android:id="@+id/action_50"
        android:title="@string/action_50_title"
        app:showAsAction="always" />

    <item android:id="@+id/action_people"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/action_people_title"
        app:showAsAction="always" />

    <item android:id="@+id/action_close"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_close_title"
        app:showAsAction="always" />

</menu>