<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrador.quizapp.SettingsActivity"
    android:orientation="vertical"
    android:background="@drawable/point_interrogation_rouages">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#55ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_label_player_name"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PlayerName"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textStyle="normal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/settings_player_name"
            android:inputType="textCapWords"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#55ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_label_help_number"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ChancesNumber"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textStyle="normal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/settings_hint_help_number"
            android:inputType="number"
            android:text="@string/settings_default_help_number"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="#55ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_label_add_friend"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PlayerFriendName"
                android:textSize="@dimen/abc_action_bar_title_text_size"
                android:textStyle="normal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/settings_hint_friend_name"
                android:inputType="textCapWords"
                android:layout_weight="5" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_add_friend"
                android:id="@+id/button_add_friend"
                android:background="#77000000"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:onClick="saveState" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textViewFriends" />

        <!--<ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewFriends" />-->
    </ScrollView>
</LinearLayout>
