<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".QuizApp"
    android:orientation="vertical"
    android:id="@+id/QuizApp"
    android:background="@drawable/point_interrogation_rouages">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/bPlay"
        android:onClick="playButtonClick"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="20dp"
        android:textColor="#ffa2c4f5"
        android:background="#bb000000"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/bScores"
        android:onClick="scoresButtonClick"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="20dp"
        android:textColor="#ffa2c4f5"
        android:background="#bb000000"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/bSettings"
        android:onClick="settingsButtonClick"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="20dp"
        android:textColor="#ffa2c4f5"
        android:background="#bb000000"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold" />

</LinearLayout>
